# osv

./: .gitignore
bms/: raw_serial_2.txt
bms/bms-dashboard/: .gitignore  README
bms/bms-dashboard/src/main/java/eu/telecom_bretagne/osvbmsdashboard/main/: App.java  DataPanel.java  EastPanel.java  OptionFrame.java
bms/bms-data-collector/: README  osv-bms-main.pl
bms_reverse/bms-dashboard/: .gitignore  .project  README  tmp.pl
bms_reverse/bms-dashboard/src/main/java/eu/telecom_bretagne/osvbmsdashboard/main/: App.java  BMSFilesWatcher.java  CenterPanel.java  DataPanel.java  EastPanel.java  MainWindow.java  OptionFrame.java  StateOfChargeDisplay.java
bms_reverse/bms-data-collector/: README  osv-bms-data-driver.pl
dashboard/: .project  README
dashboard/src/fr/enstb/osv/dashboard/: App.java  MainPanel.java  MainWindow.java  MapPanel.java  OSVDataWatcher.java  OSVException.java  OSVPanel.java  SettingsPanel.java
dashboard/src/fr/enstb/osv/dashboard/components/: OSVButton.java  OSVColors.java  OSVEmptyPanel.java  OSVFonts.java  OSVPanel.java  OSVToggleButton.java
dashboard/src/fr/enstb/osv/dashboard/widgets/: OSVBasicTextWidget.java  OSVBatteryCellWidget.java  OSVBatteryWidget.java  OSVDateWidget.java  OSVElementStatusWidget.java  OSVSpeedCounter.java  OSVTextWidget.java  OSVThermoSensorWidget.java
engine-controller/engine-controller-data-reader/: .gitignore  README  bootstrap  configure.ac
engine-controller/engine-controller-data-reader/src/: DashboardClient.cpp  DashboardClient.h  ECClient.cpp  ECClient.h  ECError.cpp  ECError.h  Main.cpp  Makefile.am
